--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -45,16 +45,13 @@ custom_proxy_group=📺流媒体`select`[]🚀代理`[]🇭🇰香港`[]🇸🇬
 custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇸🇬新加坡`[]🇯🇵日本`[]🇹🇼台湾`[]🚀代理
 
 # 国内服务分组
-custom_proxy_group=📱微信聊天`select`[]DIRECT`[]🇨🇳直连
+custom_proxy_group=📱微信聊天`select`[]DIRECT`[]🇨🇳直连`[]🚀代理
 custom_proxy_group=🅱️哔哩哔哩`select`[]DIRECT`[]🇭🇰香港`[]🇹🇼台湾`[]🇨🇳直连`[]🚀代理
-custom_proxy_group=📱短视频`select`[]DIRECT`[]🇨🇳直连
-custom_proxy_group=💰金融支付`select`[]DIRECT
-custom_proxy_group=🛍️购物平台`select`[]DIRECT
-custom_proxy_group=🧭地图出行`select`[]DIRECT
-custom_proxy_group=🎮游戏平台`select`[]DIRECT`[]🚀代理`[]🇭🇰香港`[]🇸🇬新加坡
-custom_proxy_group=📊工作学习`select`[]DIRECT`[]🚀代理
-custom_proxy_group=🎵音乐服务`select`[]DIRECT`[]🚀代理`[]🇨🇳直连
-custom_proxy_group=🇨🇳国内应用`select`[]DIRECT`[]🚀代理
+custom_proxy_group=📱短视频`select`[]DIRECT`[]🇨🇳直连`[]🚀代理
+custom_proxy_group=💰金融支付`select`[]DIRECT`[]🇨🇳直连
+custom_proxy_group=🛍️购物平台`select`[]DIRECT`[]🇨🇳直连
+custom_proxy_group=🧭地图出行`select`[]DIRECT`[]🇨🇳直连
+custom_proxy_group=🇨🇳国内应用`select`[]DIRECT`[]🇨🇳直连`[]🚀代理
 
 # 特殊规则分组
 custom_proxy_group=🚫广告拦截`select`[]REJECT`[]DIRECT`[]🚀代理
@@ -67,7 +64,7 @@ custom_proxy_group=🐠漏网之鱼`select`[]🚀代理`[]🇨🇳直连`[]DIREC
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 
-# 基础安全和隐私规则（优先处理）
+# 广告和隐私保护规则
 ruleset=🚫广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🚫广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
 ruleset=🚫广告拦截,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.list
@@ -79,67 +76,75 @@ ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChatPay/WeChatPay.yaml
 ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.yaml
 ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bank/Bank.yaml
-ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaUnicom/ChinaUnicom.yaml
-ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaTelecom/ChinaTelecom.yaml
-ruleset=💰金融支付,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMobile/ChinaMobile.yaml
+# 添加支付宝分流优化
+ruleset=💰金融支付,DOMAIN-SUFFIX,alipay.com
+ruleset=💰金融支付,DOMAIN-SUFFIX,alipayobjects.com
+ruleset=💰金融支付,DOMAIN-SUFFIX,alipaydns.com
+# 添加微信支付优化，提高支付成功率
+ruleset=💰金融支付,DOMAIN-SUFFIX,wechatpay.com
+ruleset=💰金融支付,DOMAIN-SUFFIX,tenpay.com
 
 # 社交聊天应用（高频使用应用）
 ruleset=📱微信聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
-ruleset=📱微信聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChatApp/WeChatApp.yaml
-ruleset=📱微信聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/QQ/QQ.yaml
+# 添加微信关键域名，提高稳定性
+ruleset=📱微信聊天,DOMAIN-SUFFIX,weixin.qq.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,wx.qq.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,vweixinthumb.tc.qq.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,wxapp.tc.qq.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,servicewechat.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,wechat.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,wechatlegal.net
+ruleset=📱微信聊天,DOMAIN-SUFFIX,wechatpay.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,weixin.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,weixinbridge.com
+ruleset=📱微信聊天,DOMAIN-SUFFIX,weixinsxy.com
+# 微信关键IP段
+ruleset=📱微信聊天,IP-CIDR,43.156.222.0/24,no-resolve
+ruleset=📱微信聊天,IP-CIDR,101.32.104.0/21,no-resolve
+ruleset=📱微信聊天,IP-CIDR,101.32.118.0/23,no-resolve
+ruleset=📱微信聊天,IP-CIDR,101.32.96.0/20,no-resolve
+ruleset=📱微信聊天,IP-CIDR,129.226.0.0/16,no-resolve
+ruleset=📱微信聊天,IP-CIDR,183.3.224.0/19,no-resolve
 
 # 国内购物平台
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JingDong/JingDong.yaml
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PinDuoDuo/PinDuoDuo.yaml
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Taobao/Taobao.yaml
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XianYu/XianYu.yaml
+# 添加美团、饿了么等外卖平台
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Meituan/Meituan.yaml
 ruleset=🛍️购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Eleme/Eleme.yaml
+# 淘宝优化
+ruleset=🛍️购物平台,DOMAIN-SUFFIX,taobao.com
+ruleset=🛍️购物平台,DOMAIN-SUFFIX,tb.cn
+ruleset=🛍️购物平台,DOMAIN-SUFFIX,tmall.com
+ruleset=🛍️购物平台,DOMAIN-SUFFIX,alicdn.com
 
 # 地图和出行
 ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GaoDe/GaoDe.yaml
 ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BaiduMap/BaiduMap.yaml
+# 新增出行规则
 ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DiDi/DiDi.yaml
 ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Ctrip/Ctrip.yaml
-ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Domain.yaml
-
-# 工作学习和生产力工具
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Weibo/Weibo.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Zhihu/Zhihu.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/115/115.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/12306/12306.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/58TongCheng/58TongCheng.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gitee/Gitee.yaml
-ruleset=📊工作学习,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouBan/DouBan.yaml
-
-# 游戏平台
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Origin/Origin.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Riot/Riot.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.yaml
-ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.yaml
-
-# 音乐服务
-ruleset=🎵音乐服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
-ruleset=🎵音乐服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/QQMusic/QQMusic.yaml
-ruleset=🎵音乐服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.yaml
+ruleset=🧭地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/12306/12306.yaml
+ruleset=🧭地图出行,DOMAIN-SUFFIX,amap.com
+ruleset=🧭地图出行,DOMAIN-SUFFIX,autonavi.com
+ruleset=🧭地图出行,DOMAIN-SUFFIX,udache.com
 
 # 国内短视频
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
-ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.yaml
+# 添加更多短视频平台
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Kuaishou/Kuaishou.yaml
-ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
+ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiGua/XiGua.yaml
+ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.yaml
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HuYa/HuYa.yaml
+ruleset=📱短视频,DOMAIN-SUFFIX,snssdk.com
+ruleset=📱短视频,DOMAIN-SUFFIX,amemv.com
+ruleset=📱短视频,DOMAIN-SUFFIX,ixigua.com
+ruleset=📱短视频,DOMAIN-SUFFIX,kuaishou.com
+ruleset=📱短视频,DOMAIN-SUFFIX,gifshow.com
 
-# B站专用分流规则 - 针对不同地区内容使用不同策略
+# B站专用分流规则
 ruleset=🅱️哔哩哔哩,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
 # 补充B站CDN域名
 ruleset=🅱️哔哩哔哩,DOMAIN-SUFFIX,bilivideo.com
@@ -152,20 +157,30 @@ ruleset=🅱️哔哩哔哩,DOMAIN-SUFFIX,szbdyd.com
 ruleset=🅱️哔哩哔哩,DOMAIN-SUFFIX,akamaized.net
 ruleset=🅱️哔哩哔哩,DOMAIN-KEYWORD,bilibili
 ruleset=🅱️哔哩哔哩,IP-CIDR,203.107.1.0/24,no-resolve
+# 增加B站关键IP
+ruleset=🅱️哔哩哔哩,IP-CIDR,121.36.0.0/15,no-resolve
+ruleset=🅱️哔哩哔哩,IP-CIDR,116.211.202.0/24,no-resolve
+ruleset=🅱️哔哩哔哩,IP-CIDR,116.211.167.0/24,no-resolve
 
 # 国内常用应用和服务
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.yaml
+# 增加常用国内应用
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Weibo/Weibo.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Zhihu/Zhihu.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/QQMusic/QQMusic.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XiaoHongShu/XiaoHongShu.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/115/115.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/360/360.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/4399/4399.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/58TongCheng/58TongCheng.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Kingsoft/Kingsoft.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sina/Sina.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudCN/CloudCN.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HuaweiCloud/HuaweiCloud.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPs/ChinaIPs_IP_Resolve.yaml
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaASN/ChinaASN_Resolve.yaml
 
 # 国际社交媒体
 ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram_Resolve.yaml
@@ -173,30 +188,17 @@ ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.yaml
 ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.yaml
 ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.yaml
-ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Line/Line.yaml
-ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.yaml
-ruleset=💬社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Whatsapp/Whatsapp.yaml
 
 # Google和AI服务
 ruleset=🔍Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🔍Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.yaml
-ruleset=🔍Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleSearch/GoogleSearch.yaml
-ruleset=🔍Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleEarth/GoogleEarth.yaml
-ruleset=🔍Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.yaml
 ruleset=🤖AI,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.yaml
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bing/Bing.yaml
 
 # 流媒体服务
 ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hulu/Hulu.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrimeVideo/PrimeVideo.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HBO/HBO.yaml
-ruleset=📺流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.yaml
+
+# 分类媒体（中等优先级规则）
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 
 # 基础分流（低优先级通用规则）
@@ -243,8 +245,11 @@ sniffer:
   skip-domain:
     - '*.alipay.com'
     - '*.taobao.com'
+    - '*.tmall.com'
+    - '*.jd.com'
     - '*.qq.com'
     - '*.weixin.qq.com'
+    - '*.bilibili.com'
     - '+.baidu.com'
     - '+.umeng.com'
     - '+.jpush.cn'
@@ -252,12 +257,20 @@ sniffer:
     - '+.qpic.cn'
     - '+.meituan.com'
     - '+.douyin.com'
+    - '+.kuaishou.com'
     - '+.163.com'
     - '+.126.com'
     - '+.boc.cn'
     - '+.icbc.com.cn'
     - '+.ccb.com'
     - '+.abchina.com'
+    - '+.95516.com'         # 银联
+    - '+.zhihu.com'
+    - '+.weibo.com'
+    - '+.douyu.com'
+    - '+.byteimg.com'       # 字节跳动CDN
+    - '+.snssdk.com'        # 今日头条系
+    - '+.toutiao.com'       # 今日头条
   force-domain:
     - '+.cmpassport.com'        # 运营商认证域名
     - '+.10086.cn'              # 中国移动
@@ -295,23 +308,40 @@ dns:
     - '+.msftconnecttest.com'
     - '+.steamcontent.com'
     - '+.cmpassport.com'
+    # 微信相关域名
     - '+.weixin.qq.com'
+    - '+.wx.qq.com'
     - '+.pay.weixin.qq.com'
-    - 'stun.l.google.com'
+    - '+.wechat.com'
+    - '+.wechatpay.com'
+    - 'wx.tenpay.com'
+    - '+.tenpay.com'
+    - '+.qlogo.cn'
+    - '+.qpic.cn'
+    - '+.servicewechat.com'
+    # QQ相关
     - '+.qq.com'
     - '+.tencent.com'
+    # 运营商
     - '+.10010.com'
     - '+.10086.cn'
     - '+.189.cn'
+    # 购物平台
     - '+.taobao.com'
+    - '+.tmall.com'
     - '+.jd.com'
     - '+.alipay.com'
     - '+.alicdn.com'
-    # B站视频域名加入fake-ip-filter
+    # 视频域名
     - '+.bilivideo.com'
     - '+.bilivideo.cn'
     - '+.hdslb.com'
     - '+.acgvideo.com'
+    - '+.douyin.com'
+    - '+.amemv.com'
+    - '+.kuaishou.com'
+    - '+.douyucdn.cn'
+    - '+.douyu.com'
     # 银行和金融服务保护
     - '+.95516.com'      # 银联
     - '+.bankcomm.com'   # 交通银行
@@ -324,6 +354,29 @@ dns:
     - '+.psbc.com'       # 邮政储蓄
     - '+.citicbank.com'  # 中信银行
     - '+.pingan.com'     # 平安银行
+    # 常用国内应用
+    - '+.baidu.com'
+    - '+.bdstatic.com'
+    - '+.163.com'
+    - '+.126.com'
+    - '+.zhihu.com'
+    - '+.zhimg.com'
+    - '+.xiami.net'
+    - '+.xiaomi.com'
+    - '+.miwifi.com'
+    - '+.mi.com'
+    - '+.huawei.com'
+    - '+.weibo.com'
+    - '+.meituan.net'
+    - '+.meituan.com'
+    - '+.dianping.com'
+    # 地图和出行
+    - '+.amap.com'
+    - '+.autonavi.com'
+    - '+.ctrip.com'
+    - '+.didialift.com'
+    - '+.diditaxi.com.cn'
+    - '+.udache.com'
 
   # 防劫持基础DNS
   default-nameserver:
@@ -417,6 +470,17 @@ dns:
     '+.wechat.com': 'https://doh.pub/dns-query'
     '+.weixin.qq.com': 'https://doh.pub/dns-query'
     '+.qq.com': 'https://doh.pub/dns-query'
+    # 购物平台
+    '+.taobao.com': 'https://dns.alidns.com/dns-query'
+    '+.jd.com': 'https://dns.alidns.com/dns-query'
+    '+.tmall.com': 'https://dns.alidns.com/dns-query'
+    # 视频平台
+    '+.bilibili.com': 'https://doh.pub/dns-query'
+    '+.douyin.com': 'https://doh.pub/dns-query'
+    '+.kuaishou.com': 'https://doh.pub/dns-query'
+    # 地图和出行
+    '+.amap.com': 'https://dns.alidns.com/dns-query'
+    '+.ctrip.com': 'https://dns.alidns.com/dns-query'
     # 屏蔽广告拦截域名
     'geosite:category-ads-all': ['rcode://refused']
 
