--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -48,50 +48,40 @@ custom_proxy_group=📢广告隐私`select`[]REJECT`[]DIRECT`[]🚀代理
 custom_proxy_group=🇨🇳直连`select`[]DIRECT`[]🚀代理
 custom_proxy_group=🐠漏网之鱼`select`[]🚀代理`[]DIRECT`[]🇨🇳直连`[]👆🏻指定
 
-# ========== 精简分流规则配置 ==========
-# 基础安全和隐私规则
+# ========== 分流规则配置 - 更高效的优先级排序 ==========
+# 1. 基础安全和隐私规则（最高优先级）
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
-ruleset=📢广告隐私,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=📢广告隐私,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
 
-# 国内常用核心应用（使用域名方式匹配核心服务，减少规则数量）
+# 2. 金融支付与社交聊天（高优先级核心应用）
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.yaml
 ruleset=📱社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
-ruleset=📱社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Weibo/Weibo.yaml
-ruleset=📱社交聊天,DOMAIN-SUFFIX,qq.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,alipay.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,taobao.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,jd.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,baidu.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,douyin.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,bilibili.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,bilivideo.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,hdslb.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,163.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,126.com
-ruleset=🇨🇳国内应用,DOMAIN-SUFFIX,amap.com
+ruleset=📱社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.yaml
 
-# 精简国际应用分组规则
+# 3. 主要国内服务（集成优化）
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.yaml
+ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+
+# 4. 国际服务（流媒体优先）
+ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
+# 5. 其他国际应用
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
-ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.yaml
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.yaml
-ruleset=🤖AI平台,DOMAIN-SUFFIX,openai.com
-ruleset=🤖AI平台,DOMAIN-SUFFIX,anthropic.com
-ruleset=🤖AI平台,DOMAIN-SUFFIX,claude.ai
-ruleset=🤖AI平台,DOMAIN-SUFFIX,gemini.google.com
+ruleset=🤖AI平台,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
 
-# 精简使用高质量的分类规则
-ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-
-# 基础分流（使用高质量规则集减少规则数量）
+# 6. 基础分流规则（通用规则）
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🚀代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
-ruleset=🚀代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+# 去除gfw规则，避免规则重叠
 
-# 兜底规则
+# 7. 兜底规则
 ruleset=🇨🇳直连,[]GEOIP,CN,no-resolve
 ruleset=🐠漏网之鱼,[]FINAL
 
@@ -172,28 +162,21 @@ dns:
   fake-ip-range: 198.18.0.1/16
   use-hosts: true
 
-  # 精简fake-ip-filter，只保留核心服务
+  # 精简fake-ip-filter（仅保留核心服务）
   fake-ip-filter:
     - '*.lan'
     - 'stun.*.*'
     - '+.msftncsi.com'
-    - '+.msftconnecttest.com'
-    - '+.steamcontent.com'
-    - '+.cmpassport.com'
     - '+.qq.com'
     - '+.weixin.qq.com'
     - '+.taobao.com'
-    - '+.jd.com'
     - '+.alipay.com'
-    - '+.alicdn.com'
-    - '+.bilivideo.com'
-    - '+.hdslb.com'
-    # 金融服务保护
     - '+.95516.com'
     - '+.bank*.com'
     - '+.icbc.com.cn'
     - '+.ccb.com'
     - '+.boc.cn'
+    - '+.bilivideo.com'
 
   # 防劫持基础DNS
   default-nameserver:
