--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -50,48 +50,49 @@ custom_proxy_group=🇨🇳直连`select`[]DIRECT`[]🚀代理
 custom_proxy_group=🐠漏网之鱼`select`[]🚀代理`[]DIRECT`[]🇨🇳直连`[]👆🏻指定
 
 # ========== 分流规则配置 - 更高效的优先级排序 ==========
-# 1. 基础安全和隐私规则（最高优先级）
+#基础安全和隐私规则（最高优先级）
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
 ruleset=📢广告隐私,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AdvertisingLite/AdvertisingLite.yaml
 
-# 2. 金融支付与社交聊天（高优先级核心应用）
+#金融支付与社交聊天
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.yaml
 ruleset=📱社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.yaml
 ruleset=📱社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.yaml
 
-# 3. 国内视频平台（专用规则）
+#国内视频平台（专用规则）
 ruleset=🎮国内视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
 ruleset=🎮国内视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
 ruleset=🎮国内视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.yaml
 ruleset=🎮国内视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/HuYa/HuYa.yaml
-# 补充B站关键域名
+#补充B站关键域名
 ruleset=🎮国内视频,DOMAIN-SUFFIX,bilivideo.com
 ruleset=🎮国内视频,DOMAIN-SUFFIX,bilivideo.cn
 ruleset=🎮国内视频,DOMAIN-SUFFIX,biliapi.net
 ruleset=🎮国内视频,DOMAIN-SUFFIX,hdslb.com
 
-# 4. 主要国内服务（集成优化）
+#主要国内服务（集成优化）
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.yaml
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu.yaml
 
-# 5. 国际服务（流媒体优先）
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
-ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-
-# 6. 其他国际应用
+#国际应用
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
 ruleset=🌐国外应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
+
+#国际流媒体
+ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+
+#AI
 ruleset=🤖AI平台,https://raw.githubusercontent.com/juewuy/ShellClash/master/rules/ai.list
 
-# 7. 基础分流规则（通用规则）
+#基础分流规则（通用规则）
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🚀代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
-# 去除gfw规则，避免规则重叠
 
-# 8. 兜底规则
+#兜底规则
 ruleset=🇨🇳直连,[]GEOIP,CN,no-resolve
 ruleset=🐠漏网之鱼,[]FINAL
 
