--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -66,18 +66,16 @@ ruleset=📱社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/JingDong.list
 ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Taobao.list
 ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PDD.list
-ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tmall.list
+ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XianYu/XianYu.yaml
 
 # 4. 短视频平台
 ruleset=📱短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
-ruleset=📱短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Kuaishou.list
-ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.yaml
 
 # 5. 游戏直播平台
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Douyu.list
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HuYa.list
-ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YY.list
+ruleset=🎮游戏直播,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+ruleset=🎮游戏直播,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/bili.list
 
 # 6. 主要国内服务
 ruleset=🇨🇳国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
@@ -198,6 +196,18 @@ dns:
     - '+.jd.com'
     - '+.pddpic.com'
     - '+.pinduoduo.com'
+    # 完善B站域名保护
+    - '+.bilivideo.com'
+    - '+.bilivideo.cn'
+    - '+.biliapi.net'
+    - '+.biliapi.com'
+    - '+.hdslb.com'
+    - '+.b23.tv'
+    - '+.biliimg.com'
+    # 完善咸鱼域名保护
+    - '+.xianyu.mobi'
+    - '+.xianyu.com'
+    - '+.xianyup.io'
 
   default-nameserver:
     - 223.5.5.5
