--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -90,11 +90,18 @@ ruleset=🌐国外应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🌐国外应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🌐国外应用,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 
-# 8. 基础分流规则
-ruleset=🇨🇳直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
+# 8. 基础分流规则 - 优化顺序，去除重复
+# 先匹配代理规则
 ruleset=🚀代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 
-# 9. 兜底规则
+# 中国域名、IP直连规则（优化顺序，专用到通用）
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=🇨🇳直连,[]GEOIP,LAN,no-resolve
+
+# 保留一个CN GEOIP作为最终直连兜底
 ruleset=🇨🇳直连,[]GEOIP,CN,no-resolve
 ruleset=🐠漏网之鱼,[]FINAL
 
