--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -71,7 +71,6 @@ ruleset=📱短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/C
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Douyu.list
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HuYa.list
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
-ruleset=🎮游戏直播,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/bili.list
 
 # 国内服务
 ruleset=🇨🇳墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
@@ -116,6 +115,9 @@ unified-delay: true
 find-process-mode: off
 inbound-tfo: false
 outbound-tfo: true
+dial-timeout: 5                # 设置连接超时时间(秒)
+tcp-keep-alive-interval: 30    # TCP保活间隔
+interface-name: ""             # 自动选择网络接口
 
 # 嗅探配置
 sniffer:
@@ -173,6 +175,9 @@ dns:
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   use-hosts: true
+  cache: true
+  cache-size: 4000
+  cache-ttl: 600
   fake-ip-filter:
     - '*.lan'
     - 'stun.*.*'
@@ -215,33 +220,42 @@ dns:
   default-nameserver:
     - 223.5.5.5
 
+  # 更保守的DNS策略
   nameserver:
     - 'https://223.5.5.5/dns-query'
+    - 'https://doh.pub/dns-query'
 
   fallback:
-    - 'https://8.8.8.8/dns-query'
+    - 'https://dns.google/dns-query'
     - 'https://1.1.1.1/dns-query'
 
-  nameserver-policy:
-    '+.alipay.com': 'https://dns.alidns.com/dns-query'
-    '+.bank': 'https://dns.alidns.com/dns-query'
-    '+.weixin.qq.com': 'https://doh.pub/dns-query'
-    '+.qq.com': 'https://doh.pub/dns-query'
-    'geosite:category-ads-all': ['rcode://refused']
+  fallback-filter:
+    geoip: true
+    geoip-code: CN
+    ipcidr:
+      - 240.0.0.0/4
+      - 0.0.0.0/32
+      - 127.0.0.0/8
+    domain:
+      - '+.google.com'
+      - '+.youtube.com'
+      - '+.twitter.com'
+      - '+.telegram.org'
+      - '+.github.com'
 
 # 网络参数
-url-test-interval: 900
-test-timeout: 2
-max-timeout: 5000
-tolerance: 150
-geodata-loader: memconservative
 tcp-fast-open: true
 tcp-fast-fallback: true
 udp-priority: false
 sniff-tls-sni: true
 connection-test-url: https://www.gstatic.com/generate_204
-disable-udp-traffic: false
+url-test-interval: 900
+test-timeout: 3
+max-timeout: 5000
+tolerance: 150
+geodata-loader: memconservative
 routing-mark: 6
+disable-udp-traffic: false
 firewall-mode: blacklist
 force-cert-verify: true
 connection-reuse: true
