--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -103,21 +103,19 @@ mode: rule
 log-level: silent
 ipv6: false
 external-controller: 127.0.0.1:9090
+global-client-fingerprint: chrome
 profile:
   store-selected: true
   store-fake-ip: true
   tracing: false
 
 # 移动网络优化
-keep-alive-interval: 90
-tcp-concurrent: 3
+keep-alive-interval: 60
+tcp-concurrent: 2
 unified-delay: true
 find-process-mode: off
-inbound-tfo: false
-outbound-tfo: true
-dial-timeout: 5                # 设置连接超时时间(秒)
-tcp-keep-alive-interval: 30    # TCP保活间隔
-interface-name: ""             # 自动选择网络接口
+dial-timeout: 8
+interface-name: ""
 
 # 嗅探配置
 sniffer:
@@ -141,18 +139,10 @@ sniffer:
     - '*.qq.com'
     - '*.weixin.qq.com'
     - '+.baidu.com'
-    - '+.umeng.com'
-    - '+.jpush.cn'
-    - '+.gtimg.cn'
-    - '+.qpic.cn'
-    - '+.meituan.com'
     - '+.douyin.com'
-    - '+.163.com'
-    - '+.126.com'
     - '+.boc.cn'
     - '+.icbc.com.cn'
     - '+.ccb.com'
-    - '+.abchina.com'
   skip-cert-verify: true
 
 # TUN配置
@@ -163,9 +153,10 @@ tun:
     - 'any:53'
   auto-route: true
   auto-detect-interface: true
-  mtu: 1280
+  mtu: 1350
   strict-route: false
   endpoint-independent-nat: true
+  device: utun0
 
 # DNS配置
 dns:
@@ -188,46 +179,24 @@ dns:
     - '+.alipay.com'
     - '+.95516.com'
     - '+.bank*.com'
-    - '+.icbc.com.cn'
-    - '+.ccb.com'
-    - '+.boc.cn'
     - '+.bilivideo.com'
     - '+.douyinvod.com'
-    - '+.douyinpic.com'
-    - '+.douyinstatic.com'
-    - '+.kuaishou.com'
-    - '+.yximgs.com'
     - '+.jd.com'
-    - '+.pddpic.com'
-    - '+.pinduoduo.com'
-    - '+.bilivideo.com'
-    - '+.bilivideo.cn'
     - '+.biliapi.net'
     - '+.biliapi.com'
-    - '+.hdslb.com'
-    - '+.b23.tv'
-    - '+.biliimg.com'
-    - '+.xianyu.mobi'
-    - '+.xianyu.com'
-    - '+.xianyup.io'
     - '+.10086.cn'
-    - '+.cmcc.cn'
-    - '+.10010.com'
-    - '+.chinaunicom.cn'
-    - '+.189.cn'
-    - '+.chinatelecom.cn'
 
   default-nameserver:
     - 223.5.5.5
 
-  # 更保守的DNS策略
   nameserver:
     - 'https://223.5.5.5/dns-query'
-    - 'https://doh.pub/dns-query'
 
   fallback:
-    - 'https://dns.google/dns-query'
-    - 'https://1.1.1.1/dns-query'
+    - 'https://8.8.8.8/dns-query'
+
+  proxy-server-nameserver:
+    - 'https://223.5.5.5/dns-query'
 
   fallback-filter:
     geoip: true
@@ -244,20 +213,15 @@ dns:
       - '+.github.com'
 
 # 网络参数
-tcp-fast-open: true
 tcp-fast-fallback: true
 udp-priority: false
 sniff-tls-sni: true
 connection-test-url: https://www.gstatic.com/generate_204
-url-test-interval: 900
-test-timeout: 3
-max-timeout: 5000
-tolerance: 150
+url-test-interval: 1200
+test-timeout: 5
+max-timeout: 8000
+tolerance: 200
 geodata-loader: memconservative
-routing-mark: 6
-disable-udp-traffic: false
-firewall-mode: blacklist
-force-cert-verify: true
 connection-reuse: true
-transport-thread: 2
-buffer-size: 8192
+transport-thread: 1
+buffer-size: 4096
