--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -37,11 +37,10 @@ custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic
 custom_proxy_group=🌍其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # 应用分组
-custom_proxy_group=🌐墙外`select`[]🚀代理`[]🇺🇸美国`[]🇸🇬新加坡`[]🇭🇰香港`[]🇯🇵日本`[]🇹🇼台湾`[]🌍其他
+custom_proxy_group=🌐国际`select`[]🚀代理`[]🇺🇸美国`[]🇸🇬新加坡`[]🇭🇰香港`[]🇯🇵日本`[]🇹🇼台湾`[]🌍其他
 custom_proxy_group=📱社交聊天`select`[]DIRECT`[]🚀代理`[]🇭🇰香港`[]🇸🇬新加坡`[]🇺🇸美国
 custom_proxy_group=🎬流媒体`select`[]🚀代理`[]🇭🇰香港`[]🇸🇬新加坡`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🌍其他
-custom_proxy_group=🎬Emby`select`[]🇭🇰香港`[]🚀代理`[]🇸🇬新加坡`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🌍其他
-custom_proxy_group=🇨🇳墙内`select`[]DIRECT`[]🚀代理
+custom_proxy_group=🇨🇳直连`select`[]DIRECT`[]🚀代理
 custom_proxy_group=📱短视频`select`[]DIRECT`[]🚀代理
 custom_proxy_group=🎮游戏直播`select`[]DIRECT`[]🚀代理
 custom_proxy_group=🛒购物平台`select`[]DIRECT`[]🚀代理
@@ -49,13 +48,14 @@ custom_proxy_group=📢广告隐私`select`[]REJECT`[]DIRECT`[]🚀代理
 custom_proxy_group=🐠漏网之鱼`select`[]🚀代理`[]DIRECT`[]👆🏻指定
 
 # 分流规则
-ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/ChinaOnly.list
 ruleset=📢广告隐私,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=📢广告隐私,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 
 # 金融和社交
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=📱社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
 ruleset=📱社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
 
@@ -74,26 +74,49 @@ ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
 
 # 国内服务
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu_Classical.yaml
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu_Classical.yaml
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 
 # 国际服务
+ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=🎬Emby,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/emby.list
-ruleset=🎬Emby,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Emby/Emby.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌐墙外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=🌐墙外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
-ruleset=🌐墙外,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
 
 # 基础分流规则
-ruleset=🚀代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🇨🇳墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=🇨🇳墙内,[]GEOIP,LAN,no-resolve
-ruleset=🇨🇳墙内,[]GEOIP,CN,no-resolve
+ruleset=🚀代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🇨🇳直连,[]GEOIP,LAN,no-resolve
+ruleset=🇨🇳直连,[]GEOIP,CN,no-resolve
 ruleset=🐠漏网之鱼,[]FINAL
+
+# TUN配置
+tun:
+  enable: true
+  stack: system
+  dns-hijack:
+    - 'any:53'
+  auto-route: true
+  auto-detect-interface: true
+  mtu: 1350
+  endpoint-independent-nat: true
+
+# DNS配置
+dns:
+  enable: true
+  ipv6: false
+  default-nameserver:
+    - 223.6.6.6
+
+  nameserver:
+    - 'https://223.5.5.5/dns-query'
+
+  fallback:
+    - 'https://8.8.8.8/dns-query'
+
+  proxy-server-nameserver:
+    - 'https://223.5.5.5/dns-query'
