--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,12 +28,12 @@ overwrite_original_rules=true
 # 代理分组
 custom_proxy_group=🚀代理`select`[]⚡低延迟`[]🇭🇰香港`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🇹🇼台湾`[]🌍其他`[]👆🏻指定`[]DIRECT`[]REJECT
 custom_proxy_group=👆🏻指定`select`.*
-custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
-custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`360,,60
+custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`360,,60
+custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`360,,60
+custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`360,,60
+custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`360,,60
 custom_proxy_group=🌍其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # 应用分组
@@ -102,21 +102,63 @@ tun:
     - 'any:53'
   auto-route: true
   auto-detect-interface: true
-  mtu: 1350
+  mtu: 1400
   endpoint-independent-nat: true
 
-# DNS配置
+# DNS 配置 - 国内外DNS分流
 dns:
   enable: true
   ipv6: false
-  default-nameserver:
-    - 223.6.6.6
-
+  listen: 0.0.0.0:53
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
+  fake-ip-filter:
+    - '*.lan'
+    - '*.local'
+    - 'localhost.ptlogin2.qq.com'
+    - 'dns.msftncsi.com'
+    - 'www.msftncsi.com'
+    - 'www.msftconnecttest.com'
   nameserver:
-    - 'https://223.5.5.5/dns-query'
-
+    - 223.5.5.5     # 阿里DNS
+    - 119.29.29.29  # 腾讯DNS
   fallback:
-    - 'https://8.8.8.8/dns-query'
+    - tls://8.8.8.8:853         # Google DNS over TLS
+    - tls://1.1.1.1:853         # Cloudflare DNS over TLS
+    - https://dns.google/dns-query  # Google DoH
+    - https://cloudflare-dns.com/dns-query  # Cloudflare DoH
+  fallback-filter:
+    geoip: true
+    geoip-code: CN
+    ipcidr:
+      - 240.0.0.0/4
+      - 127.0.0.1/8
+      - 0.0.0.0/32
+    domain:
+      - '+.google.com'
+      - '+.facebook.com'
+      - '+.youtube.com'
+      - '+.twitter.com'
+      - '+.instagram.com'
+      - '+.netflix.com'
+      - '+.telegram.org'
+      - '+.github.com'
+      - '+.reddit.com'
+      - '+.wikipedia.org'
+      - '+.cloudflare.com'
+      - '+.discord.com'
+      - '+.spotify.com'
+      - '+.twitch.tv'
+      - '+.amazon.com'
 
-  proxy-server-nameserver:
-    - 'https://223.5.5.5/dns-query'
+# 蜂窝网络优化
+profile:
+  store-selected: true
+  store-fake-ip: true
+  tracing: false
+
+# 连接优化
+tcp-concurrent: true
+skip-auth-when-fail: true
+find-process-mode: always
+keep-alive-interval: 45
