--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,12 +28,12 @@ overwrite_original_rules=true
 # 代理分组
 custom_proxy_group=🚀代理`select`[]⚡低延迟`[]🇭🇰香港`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🇹🇼台湾`[]🌍其他`[]👆🏻指定`[]DIRECT`[]REJECT
 custom_proxy_group=👆🏻指定`select`.*
-custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`360,,60
-custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`360,,60
-custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`360,,60
-custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`360,,60
-custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`360,,60
+custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`200,,50
+custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=🌍其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # 应用分组
@@ -102,10 +102,10 @@ tun:
     - 'any:53'
   auto-route: true
   auto-detect-interface: true
-  mtu: 1400
+  mtu: 1350
   endpoint-independent-nat: true
 
-# DNS 配置 - 国内外DNS分流
+# DNS 配置 - 优化国内外分流
 dns:
   enable: true
   ipv6: false
@@ -119,21 +119,29 @@ dns:
     - 'dns.msftncsi.com'
     - 'www.msftncsi.com'
     - 'www.msftconnecttest.com'
+
+  # 国内DNS (IP方式，高效)
   nameserver:
     - 223.5.5.5     # 阿里DNS
     - 119.29.29.29  # 腾讯DNS
+    - 114.114.114.114  # 114DNS
+
+  # 国外DNS (加密方式，安全)
   fallback:
-    - tls://8.8.8.8:853         # Google DNS over TLS
-    - tls://1.1.1.1:853         # Cloudflare DNS over TLS
-    - https://dns.google/dns-query  # Google DoH
-    - https://cloudflare-dns.com/dns-query  # Cloudflare DoH
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
+    - tls://8.8.8.8:853  # Google DoT
+    - tls://1.1.1.1:853  # Cloudflare DoT
+
+  # 分流设置
   fallback-filter:
-    geoip: true
+    geoip: true  # 使用GEOIP数据判断
     geoip-code: CN
     ipcidr:
       - 240.0.0.0/4
       - 127.0.0.1/8
       - 0.0.0.0/32
+    # 强制这些域名使用加密DNS解析
     domain:
       - '+.google.com'
       - '+.facebook.com'
@@ -150,15 +158,27 @@ dns:
       - '+.spotify.com'
       - '+.twitch.tv'
       - '+.amazon.com'
+      - '+.github.io'
+      - '+.medium.com'
+      - '+.bing.com'
+      - '+.microsoft.com'
+
+  # 防止DNS污染
+  default-nameserver:
+    - 223.5.5.5
+    - 119.29.29.29
+
+  # DNS缓存设置
+  caching: true
+  cache-size: 4096
 
 # 蜂窝网络优化
 profile:
   store-selected: true
   store-fake-ip: true
-  tracing: false
 
 # 连接优化
 tcp-concurrent: true
 skip-auth-when-fail: true
 find-process-mode: always
-keep-alive-interval: 45
+keep-alive-interval: 30
