--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -115,15 +115,12 @@ dns:
 
   # 国内DNS (优化顺序)
   nameserver:
-    - dhcp://       # 使用运营商DNS提高蜂窝网络兼容性
-    - 223.5.5.5     # 阿里DNS备用
+    - 223.5.5.5     # 阿里DNS
     - 119.29.29.29  # 腾讯DNS备用
 
   # 国外DNS (优化顺序)
   fallback:
-    - https://dns.alidns.com/dns-query # 阿里加密DNS，国内访问更快
-    - https://doh.pub/dns-query        # 腾讯加密DNS，国内访问更快
-    - https://dns.google/dns-query     # 谷歌DNS备用
+    - https://dns.google/dns-query     # 谷歌DNS
     - https://cloudflare-dns.com/dns-query # Cloudflare备用
 
   # 分流设置
